--- a/StreamTools/StreamTools/Components/Pages/Home.razor
+++ b/StreamTools/StreamTools/Components/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 
-<Container Fluid Flex="Flex.AlignContent.Center.JustifyContent.Center.Shrink.Is1"
+<MudContainer Fluid Flex="Flex.AlignContent.Center.JustifyContent.Center.Shrink.Is1"
            VerticalAlignment="VerticalAlignment.Middle">
     <Login />
-</Container>
+</MudContainer>
 
