--- a/StreamTools/StreamTools/Components/Layout/MainLayout.razor
+++ b/StreamTools/StreamTools/Components/Layout/MainLayout.razor
@@ -1,39 +1,15 @@
 ﻿@inherits LayoutComponentBase
 @layout RootLayout
-<Layout Sider>
-    <LayoutSider>
-        <LayoutSiderContent>
-            <NavMenu />
-        </LayoutSiderContent>
-    </LayoutSider>
-    <Layout>
-        <LayoutHeader Fixed>
-            <Bar Background="Background.Dark"
-                 ThemeContrast="ThemeContrast.Dark"
-                 Mode="BarMode.Horizontal"
-                 Breakpoint="Breakpoint.Desktop"
-                 NavigationBreakpoint="Breakpoint.Tablet">
-                <BarBrand>
-                    Pi-Shock
-                </BarBrand>
-                <BarMenu>
-                    <BarStart>
-                        <BarItem>
-                            <BarLink To="" Match="Match.All">
-                                Home <BarIcon IconName="IconName.Dashboard" />
-                            </BarLink>
-                        </BarItem>                      
-                    </BarStart>
-                    <BarEnd>
-                        <BarItem>
-                            <Button Color="Color.Success" Clicked="OpenLoginModalAsync">Login<BarIcon IconName="IconName.LockOpen" /></Button>
-                        </BarItem>
-                    </BarEnd>
-                </BarMenu>
-            </Bar>
-        </LayoutHeader>
-        <LayoutContent Padding="Padding.Is4.OnX">
-            @Body
-        </LayoutContent>
-    </Layout>
-</Layout>
+<MudLayout>
+    <MudAppBar>
+        <MudIconButton Color="Color.Primary" Icon="@Icons.Material.Filled.Menu" OnClick="ToggleDrawer" />
+        <MudSpacer />
+        <MudButton Color="Color.Success" EndIcon="@Icons.Material.Filled.LockOpen" OnClick="OpenLoginModalAsync">Login</MudButton>
+    </MudAppBar> 
+    <MudDrawer @bind-Open="open" Variant="@DrawerVariant.Mini" OpenMiniOnHover="true">
+        <NavMenu />
+    </MudDrawer>
+    <MudMainContent>
+        @Body
+    </MudMainContent>
+</MudLayout>
