--- a/StreamTools/StreamTools/Components/Login.razor
+++ b/StreamTools/StreamTools/Components/Login.razor
@@ -1,49 +1,21 @@
-﻿<Modal @ref="lazyReloadModalRef" RenderMode="ModalRenderMode.LazyReload" Animated="true">
-    <ModalContent Background="Background.Secondary" Size="ModalSize.Small" Centered>
-        <ModalHeader>
-            <ModalTitle Size="HeadingSize.Is4">
+﻿@using System.ComponentModel.DataAnnotations
+<MudDialog RenderMode="ModalRenderMode.LazyReload" Animated="true">
+        <TitleContent>
+            <MudText Size="HeadingSize.Is4">
                 Log in to get started
-            </ModalTitle>
-            <CloseButton />
-        </ModalHeader>
-        <ModalBody>
-            <Form>
-                <Field>
-                    <FieldLabel>Email</FieldLabel>
-                    <FieldBody>
-                        <Addons>
-                            <Addon AddonType="AddonType.Start">
-                                <AddonLabel>
-                                    <Icon Name="IconName.Mail" />
-                                </AddonLabel>
-                                <Addon AddonType="AddonType.Body">
-                                    <TextEdit Role="TextRole.Email" Autofocus="true" Placeholder="@("you@somewebsite.com")" @bind-Text="email" />
-                                </Addon>
-                            </Addon>
-                        </Addons>
-                    </FieldBody>
-                </Field>
-                <Field>
-                    <FieldLabel>Password</FieldLabel>
-                    <FieldBody>
-                        <Addons>
-                            <Addon AddonType="AddonType.Start">
-                                <AddonLabel>
-                                    <Icon Name="IconName.Lock" />
-                                </AddonLabel>
-                                <Addon AddonType="AddonType.Body">
-                                    <TextEdit Role="TextRole.Password" @bind-Text="password" />
-                                </Addon>
-                            </Addon>
-                        </Addons>
-                    </FieldBody>
-                </Field>
-            </Form>
-        </ModalBody>
-        <ModalFooter>
-            <Button Type="ButtonType.Submit" Color="Color.Primary" Shadow="Shadow.Default">
-                Login <Icon Name="IconName.LockOpen" />
-            </Button>
-        </ModalFooter>
-    </ModalContent>
-</Modal>
+            <MudButton Color="Color.Error" OnClick="Close">Close</MudButton>
+            </MudText>
+            
+        </TitleContent>
+        <DialogContent>
+            <MudForm>
+                <MudTextField T="string" Label="Email" Required="true" RequiredError="Email is required" Validation="@(new EmailAddressAttribute() {ErrorMessage="Invalid Email address"})" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Mail" @bind-Text="@email" />
+                <MudTextField T="string" Label="Password" Required="true" RequiredError="Password is required" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Password" @bind-Text="@password" />
+            </MudForm>
+        </DialogContent>
+        <DialogActions>
+            <MudButton Type="ButtonType.Submit" Color="Color.Primary" Shadow="Shadow.Default" EndIcon="@Icons.Material.Filled.LockOpen">
+                Login
+            </MudButton>
+        </DialogActions>
+</MudDialog>
