--- a/StreamTools/StreamTools/Components/_Imports.razor
+++ b/StreamTools/StreamTools/Components/_Imports.razor
@@ -1,11 +1,5 @@
-﻿@using Blazorise
-@using Blazorise.Animate
-@using Blazorise.Components
-@using Blazorise.DataGrid
-@using Blazorise.LoadingIndicator
-@using Blazorise.SpinKit
-@using Blazorise.Snackbar
-@using System.Net.Http
+﻿@using System.Net.Http
+@using MudBlazor
 @using System.Net.Http.Json
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
